--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ matrix:
     - os: linux
       compiler: gcc
       env: BUILD_WRAPPING=off NPROC=3
+    - os: osx
+      compiler: clang
+      env: BUILD_WRAPPING=off NPROC=3
 
 env:
   global:
