--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,10 @@ os:
   - linux
   - osx
 
-matrix:
-  include:
-    - os: linux
-      compiler: clang
-      env: BUILD_WRAPPING=on NPROC=8
-    - os: linux
-      compiler: gcc
-      env: BUILD_WRAPPING=off NPROC=3
-    - os: osx
-      compiler: clang
-      env: BUILD_WRAPPING=off NPROC=3
-
 env:
   global:
     # The python tests look for OPENSIM_HOME.
-    - OPENSIM_HOME=~/opensim-install SWIG=swig-2.0.10
+    - OPENSIM_HOME=~/opensim-install SWIG=swig-2.0.10 BUILD_WRAPPING=off NPROC=3
 
 before_install:
   ## Install CMake 2.8.8 (for CMakePackageConfigHelpers).
